# CrowdSimulator

./: README.md  docker-compose.yml
.github/workflows/: ci.yaml  init.sh
backend/: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  compile_commands.json
backend/integration_tests/: test_web_server.py
backend/main/include/: actions.h  application_context.h  border.h  catable.h  grid.h  person.h  planner.h  point.h  prioritized_planner.h  random_planner.h  segment.h  simple_planner.h  timed_node.h
backend/main/src/: application_context.cpp  border.cpp  catable.cpp  grid.cpp  main.cpp  person.cpp  point.cpp  prioritized_planner.cpp  random_planner.cpp  segment.cpp  simple_planner.cpp
backend/test/src/: test_border.cpp  test_catable.cpp  test_grid.cpp  test_person.cpp  test_planner.cpp  test_point.cpp  test_random_person.cpp  test_random_route.cpp  test_route.cpp  test_routes_all.cpp  test_segment.cpp
frontend/: AnimationDetail.tsx  App.tsx  AuthPage.tsx  Dockerfile  MapDetail.tsx  Maps.tsx  README.md  index.html  main.jsx  package-lock.json  package.json  vite.config.js
frontend/src/components/: GistComponent.tsx  GridComponent.tsx  NotFound.tsx  SVGRoundButton.tsx
frontend/src/models/: Cell.ts  Grid.ts  Group.ts  NamedPoint.ts  Person.ts  Wall.ts
frontend/src/services/: api.ts
frontend/styles/: App.css  GridComponent.css  NotFound.css  SVGRoundButton.css
middle-services/: .env.example  .gitignore  Dockerfile  README.md  app.py  keyfile  requirements.txt
middle-services/crowd_db/: .env.example  requirements.txt
middle-services/crowd_db/db/: client.py  config.py  models.py  repository.py  validators.py
middle-services/crowd_db/scripts/: init_mongo.sh  install_mongodb_ubuntu.sh  install_mongodb_wsl.sh  seed_example_map.py  setup_db.py
middle-services/crowd_db/tests/: conftest.py  factories.py  test_models_roundtrip.py  test_repository_integration.py  test_repository_unit.py  test_validator_integration.py
middle-services/swagger/: swagger.yaml
middle-services/tests_api/: conftest.py  test_app_endpoints.py
